--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,8 +1,10 @@
 html,
-body {
+body,
+#app {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
   background-color: #2b4b6b;
+  min-width: 1024px;
 }
