--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -8,3 +8,20 @@ body,
   background-color: #2b4b6b;
   min-width: 1024px;
 }
+.el-breadcrumb {
+  margin-bottom: 15px;
+}
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+.el-table {
+  margin-top: 15px;
+  font-size: 12px;
+}
+.el-pagination {
+  margin-top: 15px;
+}
+/* 保证分页的下拉按钮在中间 */
+.el-input__icon {
+  line-height: 1;
+}
